fix: nats configuration in both workflows and k8s nats resources edited

--- a/codecov.yml
+++ b/codecov.yml
@@ -18,6 +18,10 @@ flags:
     paths:
       - apps/web/
     carryforward: true
+  worker:
+    paths:
+      - apps/worker/
+    carryforward: true
 
 comment:
   layout: "header, flags, files"
