--- a/.github/workflows/reusable-test-python.yml
+++ b/.github/workflows/reusable-test-python.yml
@@ -44,11 +44,6 @@ jobs:
         ports:
           - 4222:4222
           - 8222:8222
-        options: >-
-          --health-cmd "wget --spider -q http://localhost:8222/healthz"
-          --health-interval 5s
-          --health-timeout 5s
-          --health-retries 5
 
     steps:
       - name: Checkout code
@@ -75,7 +70,9 @@ jobs:
 
       - name: Wait for NATS
         run: |
-          timeout 30 bash -c 'until wget --spider -q http://localhost:8222/healthz; do sleep 1; done'
+          sleep 5
+          timeout 30 bash -c 'until curl -sf http://localhost:8222/varz > /dev/null; do echo "Waiting for NATS..."; sleep 2; done'
+          echo "NATS is ready"
 
       - name: Run tests
         env:
