--- a/.github/workflows/reusable-test-python.yml
+++ b/.github/workflows/reusable-test-python.yml
@@ -56,13 +56,15 @@ jobs:
           cache: 'pip'
           cache-dependency-path: '${{ inputs.app_path }}/pyproject.toml'
 
+      - name: Install Poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
       - name: Install dependencies
-        env:
-          DATABASE_URL: postgresql+psycopg2://test:test@localhost:5433/test_db
         run: |
           cd ${{ inputs.app_path }}
-          python -m pip install --upgrade pip
-          pip install -e ".[dev]"
+          poetry install --with dev
 
       - name: Wait for PostgreSQL
         run: |
@@ -81,7 +83,7 @@ jobs:
           NATS_URL: nats://localhost:4222
         run: |
           cd ${{ inputs.app_path }}
-          pytest -v --cov=src --cov-report=term-missing --cov-report=xml
+          poetry run pytest -v --cov=src --cov-report=term-missing --cov-report=xml
 
       - name: Upload coverage reports
         uses: codecov/codecov-action@v5
