fix: workflows python as production

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -24,7 +24,7 @@ RUN pip install --no-cache-dir --upgrade pip && \
     pydantic-settings>=2.0.0
 
 # Runtime stage
-FROM python:3.11-slim
+FROM python:3.11-slim AS production
 
 WORKDIR /app
 
