--- a/.github/workflows/reusable-test-python.yml
+++ b/.github/workflows/reusable-test-python.yml
@@ -89,7 +89,7 @@ jobs:
         uses: codecov/codecov-action@v5
         if: always()
         with:
-          file: ./${{ inputs.app_path }}/coverage.xml
+          files: ./${{ inputs.app_path }}/coverage.xml
           flags: ${{ inputs.coverage_flags }}
           name: ${{ inputs.coverage_flags }}-coverage
           fail_ci_if_error: false
