--- a/ruff.toml
+++ b/ruff.toml
@@ -1,4 +1,4 @@
-# Ruff configuration for Constellation project
+# Ruff configuration for Overflying project
 # https://docs.astral.sh/ruff/configuration/
 
 # Target Python 3.11+
