--- a/.github/workflows/reusable-deploy-gke.yml
+++ b/.github/workflows/reusable-deploy-gke.yml
@@ -67,11 +67,16 @@ jobs:
             --region=${{ inputs.region }} \
             --project=${{ inputs.project_id }}
 
-      - name: Update image tag in deployment
+      - name: Apply deployment configuration
         run: |
-          kubectl set image deployment/${{ inputs.deployment_name }} \
-            ${{ inputs.container_name }}=${{ inputs.image_tag }} \
-            --namespace=${{ inputs.namespace }}
+          # If image_tag is provided, update the image; otherwise just apply the YAML
+          if [ -n "${{ inputs.image_tag }}" ]; then
+            kubectl set image deployment/${{ inputs.deployment_name }} \
+              ${{ inputs.container_name }}=${{ inputs.image_tag }} \
+              --namespace=${{ inputs.namespace }}
+          else
+            echo "No image tag provided, skipping image update"
+          fi
 
       - name: Wait for rollout
         run: |
