fix: worker deployment with Cloud SQL Proxy
- Add Cloud SQL Proxy sidecar to worker deployments
- Update DATABASE_URL to use localhost:5432
- Add serviceAccountName to both staging and production
- Fix Dockerfile CMD to properly run from src directory

--- a/apps/worker/Dockerfile
+++ b/apps/worker/Dockerfile
@@ -66,5 +66,9 @@ RUN useradd -m -u 1000 worker && \
     chown -R worker:worker /app
 USER worker
 
-# Run the worker
-CMD ["python", "-m", "src.main"]
+# Set PYTHONPATH to include /app so modules can be imported
+ENV PYTHONPATH=/app/src
+
+# Run the worker from src directory
+WORKDIR /app/src
+CMD ["python", "main.py"]
