--- a/k8s/api/staging-deployment.yaml
+++ b/k8s/api/staging-deployment.yaml
@@ -17,6 +17,12 @@ spec:
       labels:
         app: api
         environment: staging
+        app.kubernetes.io/name: overflying-api
+        app.kubernetes.io/component: api
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8000"
+        prometheus.io/path: "/metrics"
     spec:
       serviceAccountName: staging-app-sa
       containers:
