--- a/k8s/infrastructure/nats-deployment.yaml
+++ b/k8s/infrastructure/nats-deployment.yaml
@@ -73,6 +73,12 @@ spec:
     metadata:
       labels:
         app: nats
+        app.kubernetes.io/name: nats
+        app.kubernetes.io/component: messaging
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "7777"
+        prometheus.io/path: "/metrics"
     spec:
       containers:
       - name: nats
