--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -46,15 +46,14 @@
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "@vitejs/plugin-react": "^5.1.0",
-    "@vitest/coverage-v8": "^3.2.4",
-    "@vitest/ui": "^3.2.4",
+    "@vitest/coverage-v8": "^4.0.4",
+    "@vitest/ui": "^4.0.4",
     "eslint-config-planet": "^23.3.0",
     "eslint-import-resolver-typescript": "^4.4.4",
-    "jsdom": "25.0.1",
-    "parse5": "7.2.1",
+    "happy-dom": "^20.0.10",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "typescript": "^5.9.3",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.4"
   }
 }
