refactor: globe repo removed from git

--- a/.env.example
+++ b/.env.example
@@ -51,9 +51,8 @@ GPU_SIMULATION=true
 # POLL_INTERVAL: seconds between job checks
 
 # =============================================================================
-# Globe (Frontend) Configuration
+# Frontend Configuration
 # =============================================================================
-# NEXT_PUBLIC_CESIUM_TOKEN=your-cesium-token-here
 NEXT_PUBLIC_API_URL=http://localhost:8000
 
 # =============================================================================
@@ -64,7 +63,6 @@ NEXT_PUBLIC_API_URL=http://localhost:8000
 #   apps/api/.env.production.override
 #   apps/worker/.env.staging.override
 #   apps/worker/.env.production.override
-#   apps/globe/.env.staging.override
-#   apps/globe/.env.production.override
+
 #
 # These files will be loaded AFTER the root .env file and can override any value.
