--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,7 +25,9 @@
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@splinetool/react-spline": "^4.1.0",
     "@tanstack/react-query": "^5.90.5",
+    "lucide-react": "^0.548.0",
     "next": "^16.0.1",
     "react-hook-form": "^7.65.0",
     "sonner": "^2.0.7",
