--- a/apps/web/firebase.json
+++ b/apps/web/firebase.json
@@ -1,66 +1,5 @@
 {
-  "hosting": [
-    {
-      "site": "overflying-staging",
-      "public": "out",
-      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-      "rewrites": [
-        {
-          "source": "**",
-          "destination": "/index.html"
-        }
-      ],
-      "headers": [
-        {
-          "source": "/_next/static/**",
-          "headers": [
-            {
-              "key": "Cache-Control",
-              "value": "public, max-age=31536000, immutable"
-            }
-          ]
-        },
-        {
-          "source": "**/*.@(html|json)",
-          "headers": [
-            {
-              "key": "Cache-Control",
-              "value": "public, max-age=0, must-revalidate"
-            }
-          ]
-        }
-      ]
-    },
-    {
-      "site": "overflying-production",
-      "public": "out",
-      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-      "rewrites": [
-        {
-          "source": "**",
-          "destination": "/index.html"
-        }
-      ],
-      "headers": [
-        {
-          "source": "/_next/static/**",
-          "headers": [
-            {
-              "key": "Cache-Control",
-              "value": "public, max-age=31536000, immutable"
-            }
-          ]
-        },
-        {
-          "source": "**/*.@(html|json)",
-          "headers": [
-            {
-              "key": "Cache-Control",
-              "value": "public, max-age=0, must-revalidate"
-            }
-          ]
-        }
-      ]
-    }
-  ]
+  "$comment": "Firebase hosting configuration has been moved to Firebase App Hosting",
+  "$comment2": "Staging backend: apphosting.staging.yaml",
+  "$comment3": "Production backend: apphosting.production.yaml"
 }
