--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,7 +30,8 @@
     "next": "^16.0.1",
     "react-hook-form": "^7.65.0",
     "sonner": "^2.0.7",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^16.0.1",
