--- a/apps/auth/deno.json
+++ b/apps/auth/deno.json
@@ -1,12 +1,54 @@
 {
   "tasks": {
     "dev": "deno run --allow-net --allow-env --allow-read --watch src/main.ts",
-    "start": "deno run --allow-net --allow-env --allow-read src/main.ts"
+    "start": "deno run --allow-net --allow-env --allow-read src/main.ts",
+    "lint": "deno lint",
+    "lint:fix": "deno lint --fix",
+    "fmt": "deno fmt",
+    "fmt:check": "deno fmt --check",
+    "test": "deno test --allow-net --allow-env --allow-read",
+    "test:watch": "deno test --allow-net --allow-env --allow-read --watch"
   },
   "imports": {
     "hono": "jsr:@hono/hono@^4.6.14",
     "djwt": "https://deno.land/x/djwt@v3.0.2/mod.ts",
     "bcrypt": "https://deno.land/x/bcrypt@v0.4.1/mod.ts",
-    "postgres": "https://deno.land/x/postgres@v0.19.3/mod.ts"
+    "postgres": "https://deno.land/x/postgres@v0.19.3/mod.ts",
+    "@std/assert": "jsr:@std/assert@^1.0.0",
+    "@std/testing": "jsr:@std/testing@^1.0.0"
+  },
+  "lint": {
+    "rules": {
+      "tags": ["recommended"],
+      "include": [
+        "ban-untagged-todo",
+        "no-eval",
+        "no-throw-literal",
+        "eqeqeq",
+        "explicit-function-return-type"
+      ],
+      "exclude": []
+    },
+    "exclude": [
+      "node_modules/",
+      "dist/",
+      "build/"
+    ]
+  },
+  "fmt": {
+    "useTabs": false,
+    "lineWidth": 100,
+    "indentWidth": 2,
+    "semiColons": false,
+    "singleQuote": true,
+    "proseWrap": "preserve",
+    "exclude": [
+      "node_modules/",
+      "dist/",
+      "build/"
+    ]
+  },
+  "test": {
+    "include": ["src/**/*.test.ts"]
   }
 }
