--- a/apps/auth/deno.json
+++ b/apps/auth/deno.json
@@ -50,5 +50,9 @@
   },
   "test": {
     "include": ["src/**/*.test.ts"]
+  },
+  "deploy": {
+    "org": "overflying",
+    "app": "auth-staging"
   }
 }
