--- a/apps/auth/deno.json
+++ b/apps/auth/deno.json
@@ -12,6 +12,7 @@
   "imports": {
     "hono": "jsr:@hono/hono@^4.6.14",
     "djwt": "https://deno.land/x/djwt@v3.0.2/mod.ts",
+    "dotenv": "https://deno.land/x/dotenv@v3.2.0/mod.ts",
     "bcrypt": "https://deno.land/x/bcrypt@v0.4.1/mod.ts",
     "postgres": "https://deno.land/x/postgres@v0.19.3/mod.ts",
     "@std/assert": "jsr:@std/assert@^1.0.0",
